[package]
name = "cswap"
version = "0.1.0"
authors = ["wolffd <wolffdy0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.0.1"
regex = "1.3.6"
nom = "5.1.1"
itertools = "0.9.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.7.3"
xoshiro = "0.0.5"
bit-vec = "0.6.1"
rand_xoshiro = "0.4.0"
rand_core = "0.5.1"
