[package]
name = "cswap-cli"
version = "0.1.0"
authors = ["wolffd <wolffdy0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
cswap = { path = "../cswap" }
log = "0.4.8"
log4rs = "0.12.0"
rand = "0.7.3"

