[package]
name = "cswap"
version = "0.1.0"
authors = ["wolffd <wolffdy0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
rand = "0.7.3"
xoshiro = "0.0.5"
bit-vec = "0.6.1"
rand_xoshiro = "0.4.0"
rand_core = "0.5.1"
walkdir = "2.3.1"
crossbeam = "0.7.3"
serde = { version = "1.0.106", features = ["derive", "rc"] }
serde-lexpr = "0.1.1"
insta = "0.16.0"
lazy_static = "1.4.0"
tempfile = "3.1.0"
criterion = "0.3.2"
log = "0.4.8"
env_logger = "0.7.1"
subprocess = "0.2.4"

[[bench]]
name = "my_benchmark"
harness = false
